Bug 876871 - Stop setting -moz-box-align:center on toolbars and move the nav-bar's padding to nav-bar-customizationtarget such that focus rings won't be cropped anymore. r=Gijs
UltraBlame original commit: f74f64b2e35b1d266fa905014c5e2ded49b40aa5

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -696,16 +696,15 @@ not
 #
 TabsToolbar
 )
-{
--
-moz
--
-box
--
-align
 :
-center
-;
+not
+(
+#
+nav
+-
+bar
+)
+{
 padding
 :
 2px
@@ -834,22 +833,6 @@ appearance
 :
 none
 ;
-padding
--
-top
-:
-4px
-!
-important
-;
-padding
--
-bottom
-:
-4px
-!
-important
-;
 background
 :
 url
@@ -958,6 +941,18 @@ z
 index
 :
 1
+;
+}
+#
+nav
+-
+bar
+-
+customizationtarget
+{
+padding
+:
+4px
 ;
 }
 #
